--- a/src/views/clientes.ejs
+++ b/src/views/clientes.ejs
@@ -1,3 +1,19 @@
-<pre>
-    <%= data.namePrevis%>
-</pre>
+<%- include('partials/header.ejs') -%>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<%- include('partials/footer.ejs') -%>
+
+
+
+
