Set Add armazon Set Listar Armazones en factura Set Eliminar Armazones en factura

--- a/src/views/clientes.ejs
+++ b/src/views/clientes.ejs
@@ -109,7 +109,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/addTipoLuna" class="needs-validation" method="post">
+                <form action="/crearFactura" class="needs-validation" method="post">
                     <div class="mb-3">
                         <label for="nameTipoluna" class="form-label">Escoge el cliente</label>
                         <select class="form-control" name="idcliente" id="">
@@ -131,9 +131,6 @@
         </div>
     </div>
 </div>
-
-
-
 <div class="modal fade" id="agregarLuna" tabindex="-1" aria-labelledby="agregarLuna" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
