--- a/src/views/factura.ejs
+++ b/src/views/factura.ejs
@@ -31,7 +31,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/" class="needs-validation"   method="post">
+                <form action="/agregarArmazon" class="needs-validation"   method="post">
                     <div class="mb-3">
                         <label for="nombreCliente" class="form-label">Marca Armazon</label>
                         <select class="form-control" name="idMarca" id="" required>
@@ -50,8 +50,7 @@
                                 <option value="<%= tamano.idTamano %>"><%= tamano.tamano %></option>
                             <% } %>
                         </select>
-
-                        </select>
+                        <input type="hidden" name="idFactura" value="<%= idFactura.id%>"/>
                     </div>
 
 
@@ -66,6 +65,60 @@
 
 
 
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Item</th>
+        <th scope="col">Marca</th>
+        <th scope="col">Talla</th>
+        <th scope="col">Tamaño</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Acciones</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    <% if (armazon) { %>
+        <!-- Si la data existe, muestra este div -->
+
+
+
+        <% armazon.forEach(function(armazon) { %>
+            <tr>
+                <td><%=armazon.name%></td>
+                <td><%=armazon.nameMarca%></td>
+                <td><%=armazon.tamano%></td>
+                <td><%=armazon.talla%></td>
+                <td>$<%=armazon.precioArmazon%></td>
+                <td>
+                    <form action="/deleteItemArmazon" method="post">
+                        <input type="hidden" name="idArmazon" value="<%=armazon.idArmazon%>">
+                        <input type="hidden" name="idFactura" value="<%= idFactura.id%>">
+                        <button type="submit" class="btn btn-danger"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
+                                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
+                            </svg> </button>
+
+                    </form>
+
+                </td>
+            </tr>
+        <% }); %>
+
+
+
+
+
+    <% }else { %>
+        <!-- Si la data no existe, muestra este div -->
+        <div>No existen Datos</div>
+    <% } %>
+
+
+    </tbody>
+</table>
+
+
 
 
 
@@ -74,3 +127,10 @@
 <%- include('partials/footer.ejs') -%>
 
 
+<style>
+    table{
+        width: 80% !important;
+        margin: 0 auto;
+
+    }
+</style>
