Set validacion al crear una factura Agregar nuevos controladores a los archivos de rutas Extraer nombres y apellidos de las personas usando CONCAT

--- a/src/views/factura.ejs
+++ b/src/views/factura.ejs
@@ -8,19 +8,27 @@
             colors="primary:#121331,secondary:#08a88a"
             style="width:250px;height:250px">
     </lord-icon>
-
-    <h1 class="display-5 fw-bold text-body-emphasis">Factura Nr: <%= idFactura.id%></h1>
+    <input type="hidden" id="idStatus"  value="<%= datos.idStatus %>">
+    <h1 class="display-5 fw-bold text-body-emphasis">Factura Nr: <%= idFactura.id %></h1>
     <div class="col-lg-6 mx-auto">
         <!--<p class="lead mb-4">Tu visión en manos expertas: Claridad y estilo a través de nuestras lentes. En Optica Naida , cuidamos de tu mirada con la más alta calidad y tendencias vanguardistas. Descubre una nueva perspectiva y atrévete a brillar con nuestros servicios personalizados.-->
-            <br> ¡Vive la experiencia visual que mereces!</p>
+        <br> ¡Vive la experiencia visual que mereces!</p>
+
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#agregarArmazon">Agregar Armazon</button>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#agregarLunas">Agregar Lunas</button>
-
-
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#agregarArmazon">
+                Agregar Armazon
+            </button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#agregarLunas">Agregar
+                Lunas
+            </button>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cerrarFactura">Cerrar
+                Factura
+            </button>
         </div>
     </div>
 </div>
+
+
 
 <div class="modal fade" id="agregarArmazon" tabindex="-1" aria-labelledby="agregarArmazon" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -30,7 +38,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/agregarArmazon" class="needs-validation"   method="post">
+                <form action="/agregarArmazon" class="needs-validation" method="post">
                     <div class="mb-3">
                         <label for="nombreCliente" class="form-label">Marca Armazon</label>
                         <select class="form-control" name="idMarca" id="" required>
@@ -49,9 +57,8 @@
                                 <option value="<%= tamano.idTamano %>"><%= tamano.tamano %></option>
                             <% } %>
                         </select>
-                        <input type="hidden" name="idFactura" value="<%= idFactura.id%>"/>
+                        <input type="hidden" name="idFactura" value="<%= idFactura.id %>"/>
                     </div>
-
 
 
                     <button type="submit" class="btn btn-primary">Enviar</button>
@@ -69,7 +76,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/agregarLuna" class="needs-validation"   method="post">
+                <form action="/agregarLuna" class="needs-validation" method="post">
                     <div class="mb-3">
                         <label for="nombreCliente" class="form-label">Tipo de Luna</label>
                         <select class="form-control" name="idTipoluna" id="" required>
@@ -80,9 +87,8 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <input type="hidden" name="idFactura" value="<%= idFactura.id%>"/>
+                        <input type="hidden" name="idFactura" value="<%= idFactura.id %>"/>
                     </div>
-
 
 
                     <button type="submit" class="btn btn-primary">Enviar</button>
@@ -92,8 +98,64 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="cerrarFactura" tabindex="-1" aria-labelledby="cerrarFactura" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="agregarCliente">Cerrar Factura</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <p style="text-align: center">¿Está seguro de cerrar la presente factura? Tenga en cuenta que una
+                        vez haga clic en 'Aceptar', no podrá editar los valores ingresados. Confirme su elección y
+                        asegúrese de revisar cuidadosamente la información antes de continuar.</p>
+                </div>
+                <form action="/cerrarFactura" method="post" novalidate>
+                    <div class="mb-3">
 
+                        <input type="hidden" name="idFactura" value="<%= idFactura.id %>"/>
+                        <input id="totalFactura" type="hidden" name="totalFactura" value="">
+                    </div>
+                    <div class="mb-3" style="margin: 0 auto; text-align: center">
+                        <button type="submit" class="btn btn-primary">Cerrar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="datos">
+    <div class="d-grid d-sm-flex justify-content-sm-center">
+        <h3>Datos del cliente</h3>
 
+    </div>
+    <div class="d-grid d-sm-flex justify-content-sm-center">
+        <h3><%= datos.Fecha %></h3>
+
+    </div>
+    <form id="datosCliente">
+
+        <div class="mb-3">
+            <label for="nameCliente" class="form-label">Nombre</label>
+            <input type="text" class="form-control" value="<%= datos.nombreCliente %>" id="nameCliente" readonly>
+        </div>
+        <div class="mb-3">
+            <label for="apellidoCliente" class="form-label">Apellido</label>
+            <input type="text" class="form-control" value="<%= datos.apellidoCliente %>" id="apellidoCliente" readonly>
+        </div>
+        <div class="mb-3">
+            <label for="cedulaCliente" class="form-label">Cedula/RUC</label>
+            <input type="number" class="form-control" value="0<%= datos.cedulaCliente %>" id="cedulaCliente" readonly>
+        </div>
+        <div class="mb-3">
+            <label for="telefonoCliente" class="form-label">Telefono</label>
+            <input type="number" class="form-control" value="0<%= datos.telefonoCliente %>" id="telefonoCliente"
+                   readonly>
+        </div>
+
+    </form>
+</div>
 
 <table class="table" id="tablaPrecios">
     <thead>
@@ -103,7 +165,7 @@
         <th scope="col">Talla</th>
         <th scope="col">Tamaño</th>
         <th scope="col">Precio</th>
-        <th scope="col">Acciones</th>
+        <th class="btn" scope="col">Acciones</th>
     </tr>
     </thead>
     <tbody>
@@ -115,19 +177,22 @@
 
         <% armazon.forEach(function(armazon) { %>
             <tr>
-                <td><%=armazon.name%></td>
-                <td><%=armazon.nameMarca%></td>
-                <td><%=armazon.tamano%></td>
-                <td><%=armazon.talla%></td>
-                <td class="precio">$<%=armazon.precioArmazon%></td>
+                <td><%= armazon.name %></td>
+                <td><%= armazon.nameMarca %></td>
+                <td><%= armazon.tamano %></td>
+                <td><%= armazon.talla %></td>
+                <td class="precio">$<%= armazon.precioArmazon %></td>
                 <td>
                     <form action="/deleteItemArmazon" method="post">
-                        <input type="hidden" name="idArmazon" value="<%=armazon.idArmazon%>">
-                        <input type="hidden" name="idFactura" value="<%= idFactura.id%>">
-                        <button type="submit" class="btn btn-danger"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                        <input type="hidden" name="idArmazon" value="<%= armazon.idArmazon %>">
+                        <input type="hidden" name="idFactura" value="<%= idFactura.id %>">
+                        <button type="submit" class="btn btn-danger">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-trash" viewBox="0 0 16 16">
                                 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
                                 <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
-                            </svg> </button>
+                            </svg>
+                        </button>
 
                     </form>
 
@@ -135,46 +200,43 @@
             </tr>
         <% }); %>
 
-
-
-
-
     <% }else { %>
         <!-- Si la data no existe, muestra este div -->
         <td colspan="5">Larry the Bird</td>
 
     <% } %>
 
-
     <% if (luna) { %>
         <!-- Si la data existe, muestra este div -->
         <% luna.forEach(function(luna) { %>
-        <tr>
-            <td><%=luna.name%></td>
-            <td><%=luna.nameTipoluna%></td>
-            <td>--</td>
-            <td>--</td>
-            <td class="precio">$<%=luna.precio%></td>
-            <td>
-                <form action="/deleteItemLuna" method="post">
-                    <input type="hidden" name="idLuna" value="<%=luna.idLuna%>">
-                    <input type="hidden" name="idFactura" value="<%= idFactura.id%>">
-                    <button type="submit" class="btn btn-danger"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
-                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5
+            <tr>
+                <td><%= luna.name %></td>
+                <td><%= luna.nameTipoluna %></td>
+                <td>--</td>
+                <td>--</td>
+                <td class="precio">$<%= luna.precio %></td>
+                <td>
+                    <form action="/deleteItemLuna" method="post">
+                        <input type="hidden" name="idLuna" value="<%= luna.idLuna %>">
+                        <input type="hidden" name="idFactura" value="<%= idFactura.id %>">
+                        <button type="submit" class="btn btn-danger">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
+                                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5
 a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
-                        </svg> </button>
+                            </svg>
+                        </button>
 
-                </form>
+                    </form>
 
-            </td>
-        </tr>
+                </td>
+            </tr>
         <% }); %>
     <% } else { %>
         <!-- Si la data no existe, muestra este div -->
         <div>Contenido cuando la data no existe</div>
     <% } %>
-
 
     <tr>
         <td></td>
@@ -205,19 +267,19 @@ a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1
 </table>
 
 
-
-
-
-
-
 <%- include('partials/footer.ejs') -%>
 
 
 <style>
-    table{
+    table {
         width: 80% !important;
         margin: 0 auto;
 
+    }
+
+    #datosCliente {
+        width: 50% !important;
+        margin: 0 auto;
     }
 </style>
 
@@ -226,10 +288,11 @@ a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1
     const precios = document.querySelectorAll('.precio');
     const subtotal = document.getElementById('subtotal');
     const subtotalMasIva = document.getElementById('masIva');
-    const totalApagar= document.getElementById('totalPagar');
+    const totalApagar = document.getElementById('totalPagar');
+    const inputTotalFactura = document.getElementById('totalFactura');
     let sumaSubtotal = 0;
     let subTotalIva = 0;
-    let totalpagar =0;
+    let totalpagar = 0;
 
 
     for (let i = 0; i < precios.length; i++) {
@@ -239,21 +302,34 @@ a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1
         sumaSubtotal += precioNumero; // Sumar al total
 
     }
-    subtotal.innerText="$"+sumaSubtotal;
-    console.log("Suma subTotal"+ sumaSubtotal);
-    subTotalIvaDecimales=sumaSubtotal*0.12;
-    subTotalIva=subTotalIvaDecimales.toFixed(2)
-    subtotalMasIva.innerText="$"+subTotalIva;
-    const sub= parseFloat(sumaSubtotal)
-    const iva= parseFloat(subTotalIva)
-    console.log(sub+iva)
-    totalpagar= sub+iva;
-    totalApagar.innerText="$"+totalpagar;
+    subtotal.innerText = "$" + sumaSubtotal.toFixed(2);
+    //console.log("Suma subTotal"+ sumaSubtotal);
+    subTotalIvaDecimales = sumaSubtotal * 0.12;
+    subTotalIva = subTotalIvaDecimales.toFixed(2);
+    subtotalMasIva.innerText = "$" + subTotalIva;
+    const sub = parseFloat(sumaSubtotal)
+    const iva = parseFloat(subTotalIva)
+    //console.log(sub+iva)
+    totalpagar = sub + iva;
+    totalApagar.innerText = "$" + totalpagar.toFixed(2);
+    totalpagar=parseFloat(totalpagar.toFixed(2))
+    //console.log(totalpagar)
+    inputTotalFactura.value = parseFloat(totalpagar);
+
+
+    //console.log(sumaSubtotal); // La suma total de los valores sin el carácter "$"
+    const status= document.getElementById('idStatus');
+    const Status= parseInt(status.value)
+    console.log(Status);
 
 
 
-    console.log(sumaSubtotal); // La suma total de los valores sin el carácter "$"
-
-
+    const botonones= document.querySelectorAll('.btn');
+    console.log(botonones);
+    if (Status == 2){
+        for (let i = 0; i < botonones.length; i++) {
+            botonones[i].style.display = "none";
+        }
+    }
 
 </script>
