--- a/src/views/clientes.ejs
+++ b/src/views/clientes.ejs
@@ -109,11 +109,11 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/crearFactura" class="needs-validation" method="post">
+                <form action="/crearFactura" class="needs-validation" novalidate method="post">
                     <div class="mb-3">
                         <label for="nameTipoluna" class="form-label">Escoge el cliente</label>
-                        <select class="form-control" name="idcliente" id="">
-                            <option value="null" selected disabled>Escoge al cliente</option>
+                        <select class="form-control"  name="idcliente" id="idCliente" required>
+                            <option  selected disabled >Escoge al cliente</option>
                             <% data.forEach(function(data) { %>
                                 <option value="<%= data.idCliente %>"><%=data.nombreCliente%></option>
                             <% }); %>
@@ -121,7 +121,7 @@
                     </div>
 
 
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" id="crearFacturaModal" disabled class="btn btn-primary">Enviar</button>
 
 
                     
@@ -131,28 +131,20 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="agregarLuna" tabindex="-1" aria-labelledby="agregarLuna" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Cliente</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 
 
 
 
 <%- include('partials/footer.ejs') -%>
 
+
+<script>
+    const idcliente = document.getElementById('idCliente');
+    const botonCrearFactura = document.getElementById('crearFacturaModal');
+    idcliente.addEventListener('change', function () {
+        botonCrearFactura.removeAttribute("disabled");
+    })
+
+
+
+</script>
